src/styles/main.scss
@import url('https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&display=swap');

$main-font: 'Fira Mono', monospace;

$family-sans-serif: $main-font;
$footer-padding: 1.5rem;

.dropdown {
  min-width: 220px;
}

.Typewriter {
  line-height: 1.5;
  padding: 15px 0 0 0;
  .cursor {
    display: inline-block;
    position: relative;
  }
  .cursor::after {
    content: "";
    margin: auto;
    position: absolute;
    right: -4px;
    top: -3px;
    width: 1px;
    height: 100%;
    background-color: #666;
    animation: cursor-animation 1.5s step-end infinite;
  }
  @keyframes cursor-animation {
    0% {
      opacity: 0;
    }
    50% {
      opacity: 1;
    }
    100% {
      opacity: 0;
    }
  }
}



@import '~bulma/bulma.sass';

